--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>Café Evangelion</title>
+        <link href="style.css" rel="stylesheet">
         <h1>Café Evangelion</h1>
         <h2>Projet de conquète du CZ</h2>
         <video src="The Beauty Of Neon Genesis Evangelion.mp4" type="video/mp4" autoplay height="720" width="1280" controls autoplay loop></video>
